syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SecurityLoginService{
	rpc GetSecurityLogin(IdRequestSecurityLogin) returns (SecurityLoginObj);
	rpc CreateSecurityLogin(SecurityLoginObjs) returns (google.protobuf.Empty);
	rpc UpdateSecurityLogin(SecurityLoginObjs) returns (google.protobuf.Empty);
	rpc DeleteSecurityLogin(SecurityLoginObjs) returns (google.protobuf.Empty);
}
message IdRequestSecurityLogin{
	string Id = 1;
}
message SecurityLoginObj{
    string Id = 1; 
    string Login = 2;
    string Password = 3;
    google.protobuf.Timestamp Created = 4;
    google.protobuf.Timestamp PasswordUpdate = 5;
    google.protobuf.Timestamp AgreementAccepted = 6;
    bool IsLocked = 7;
    bool IsInactive = 8;
    string EmailAddress = 9;
    string PhoneNumber = 10;
    string FullName = 11;
    bool ForceChangePassword = 12;
    string PrefferredLanguage = 13;       
}

message SecurityLoginObjs{
    repeated SecurityLoginObj Obj = 1;
}